Fixed chord spacing

--- a/public/style.css
+++ b/public/style.css
@@ -38,6 +38,14 @@ h2 {
   margin-left: -0.3em;
 }
 
+.chord {
+  padding-right: 0.3em;
+}
+
+.noLyric .chord {
+  padding-right: 0;
+}
+
 .section-header {
   color: #ccc;
   text-transform: small-caps;
